<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ioana.volleyscoreapp.MainActivity">


    <ImageView
        android:id="@+id/volley_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:alpha="0.65"
        android:scaleType="centerCrop"
        android:src="@drawable/rsz_volley" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <LinearLayout
        android:id="@+id/points_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/dim0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pointsH"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim100"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/dim16"
                android:text="@string/points"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dim20"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/homeScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/dim18"
                android:text="@string/zero"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dim72"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/homeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingLeft="@dimen/dim16"
                android:paddingRight="@dimen/dim16"
                android:text="@string/home"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dim14"
                android:textStyle="bold" />


            <Button
                android:id="@+id/plusOnePointHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dim48"
                android:layout_marginRight="@dimen/dim48"
                android:layout_marginTop="@dimen/dim16"
                android:onClick="addHomePoints"
                android:text="@string/addPoint" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/setHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dim16"
                    android:text="@string/set"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/dim24"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/setPointsHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dim16"
                    android:paddingTop="@dimen/dim16"
                    android:text="@string/zero"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/dim24"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="@dimen/dim0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/pointsG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim100"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/dim16"
                android:text="@string/points"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dim20"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/guestScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/dim18"
                android:text="@string/zero"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dim72"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/guestName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingLeft="@dimen/dim16"
                android:paddingRight="@dimen/dim16"
                android:text="@string/guest"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dim14"
                android:textStyle="bold" />


            <Button
                android:id="@+id/plusOnePointGuest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dim48"
                android:layout_marginRight="@dimen/dim48"
                android:layout_marginTop="@dimen/dim16"
                android:onClick="addGuestPoints"
                android:text="@string/addPoint" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/setGuest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dim16"
                    android:text="@string/set"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/dim24"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/setPointsGuest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dim16"
                    android:paddingTop="@dimen/dim16"
                    android:text="@string/zero"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/dim24"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/endGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonReset"
        android:layout_centerHorizontal="true"
        android:shadowColor="@color/colorPrimary"
        android:shadowDx="6"
        android:shadowDy="4"
        android:shadowRadius="7"
        android:text=""
        android:textAllCaps="true"
        android:textColor="@color/endGame"
        android:textSize="@dimen/dim40"
        android:textStyle="bold" />


        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/buttonReset"
            android:layout_alignStart="@+id/buttonReset"
            android:layout_below="@+id/points_linear_layout"
            android:layout_marginTop="18dp"
            android:text="@string/start" />


        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/points_linear_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="106dp"
            android:text="@string/reset" />

        <Chronometer
            android:id="@+id/clockTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonStart"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dim32"
            android:textStyle="bold" />
</RelativeLayout>

    </ScrollView>
</RelativeLayout>